@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
-<div style="width: 100%; height: 40px; background-color: #ffff00; border: 1px solid #b0b0b0; text-align: right; margin: 2px; padding: 2px;">
+<div style="width: 100%; height: 40px; background-color: #ffff00; border: 1px solid #b0b0b0; margin: 5px 5px 5px 0; padding: 2px;">
   <a href="http://itpp.sourceforge.net"><img src="itpp_logo.png" alt="IT++ Logo" style="float: left; border: 0;"></a>
   <a href="http://newcom.ismb.it"><img src="newcom_logo.png" alt="Newcom Logo" style="float: right; border: 0;"></a>
 </div>
